# python-visual-update-express

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: application.py
src/data/: general_info.py  general_settings.py
src/libs/: icons.py  threading.py  update_data.py  updates_info.py
src/ui/: main_window.py  notifications.py  status_text_widget.py  window_content.py
