[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "python-visual-update-express"
version = "1.0.4"
authors = [
    { name = "Jelmer Pijnappel", email = "chocolatepinecone@gmail.com" },
]
description = "A dialog for updating specific files by syncing them from a server. Designed to work like InstallForge's \"Visual Update Express\"."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.7.1",
    "pyqtwaitingspinner==1.3.2",
    "semver>=3.0.4",
    "QtAwesome>=1.4.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ChocolatePinecone/python-generic-updater"
Issues = "https://github.com/ChocolatePinecone/python-generic-updater/issues"